2007-01-12  James Willcox  <james@ximian.com>

	* configure.ac: bump to 0.2.2

2007-01-04  James Willcox  <james@ximian.com>

	* src/VirtualMachine.cs: ignore an empty checkpoint.vmState value

2007-01-04  James Willcox  <james@ximian.com>

	* src/Utility.cs (WritePadding): no need to let the main loop run
	if there is no progress handler.

2007-01-03  James Willcox  <james@ximian.com>

	* src/ConfigDialog.cs: set the memory spin button value to the
	OS's suggested size when the OS selection is changed.

2007-01-03  James Willcox  <james@ximian.com>

	* src/VirtualMachine.cs: make the default state 'off'.

2006-12-20  James Willcox  <james@ximian.com>

	* configure.ac: bump version to 0.2.1

	Start maintaining this file